Hello-game-world

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Login</title>
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <div id="loading">
@@ -22,15 +24,15 @@
           <a class="navbar-brand" href="#">Auth0 - JavaScript</a>
 
           <button id="btn-home-view" class="btn btn-primary btn-margin">
-              Home
+            Home
           </button>
 
           <button id="qsLoginBtn" class="btn btn-primary btn-margin">
-              Log In
+            Log In
           </button>
 
           <button id="qsLogoutBtn" class="btn btn-primary btn-margin">
-              Log Out
+            Log Out
           </button>
 
         </div>
@@ -50,5 +52,7 @@
   <script src="node_modules/auth0-js/build/auth0.js"></script>
   <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
+  <script src="game.js"></script>
 </body>
+
 </html>
